syntax = "proto3";

package c2;

// Update go_package to a simple relative directory name
option go_package = "./c2";

service CommandControl {
  // Executes a command on the server.
  rpc ExecuteCommand (CommandRequest) returns (CommandResponse);
  
  // Retrieves the current status of the server.
  rpc GetStatus (StatusRequest) returns (StatusResponse);
}

message CommandRequest {
  string command = 1; // The command to be executed by the server.
}

message CommandResponse {
  string result = 1; // The output from executing the command.
}

message StatusRequest {}

message StatusResponse {
  string status = 1; // A simple status message.
}

